[package]
name = "xml_nom_parse"
version = "0.2.0"
edition = "2021"
authors = ["Chris Morrison"]
description = "A XML parser with nom"
license = "GPL-3.0"
rust-version = "1.71"
homepage = "https://github.com/CMorrison82z/nom_xml"
repository = "https://github.com/CMorrison82z/nom_xml"
readme = "README.md"

[dependencies]
nom = "7.1.3"
